updated the bg color

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body {
-    background: #001e4d;
+    background: linear-gradient(-45deg, orange, green);
 }
 .app {
     background: #fff;
